Initial SQL parser integration.